[tool.poetry]
name = "dagger-examples"
version = "0.1.0"
description = "Examples using the Dagger Python SDK"
license = "Apache-2.0"
authors = ["Helder Correia <174525+helderco@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://dagger.io"
documentation = "https://docs.dagger.io/sdk/python"

[tool.poetry.dependencies]
python = "^3.10"
dagger-io = ">=0.2.0"

[tool.poetry.scripts]
test = "python say.py Hello"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
